--- a/src/app/gdpr/gdpr.component.html
+++ b/src/app/gdpr/gdpr.component.html
@@ -1,88 +1,41 @@
 <!--The content below is only a placeholder and can be replaced.-->
 <div class="container">
-  <div class="columns">
-    <div class="column">
+  <mat-card class="gdpr">
+    <div class="columns">
+      <div class="column">
         <img class="imagen has-text-centered" src="./assets/img/European_Union_Flag.png">
+      </div>
     </div>
-  </div>
 
+    <div class="separador"></div>
 
-  <div style="clear:both; height: 1.5rem"></div>
+    <div class="columns">
+      <div class="column">
+        <mat-card-content>
+          <div class="border">
+            <embed class="txt" src="https://api.uclassify.com/v1/%7Busername%7D/%7BclassifierName%7D/classify/?readKey=YOUR_READ_API_KEY_HERE&text=This+is+the+text+to+classify">
+            <embed class="txt" src="./assets/txt/Lorem2.txt"> </div>
+        </mat-card-content>
+      </div>
+    </div>
 
-  <div class="columns">
     <div class="column">
-          <mat-card-content>
-      <div class="description">
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna
-          aliqua. Morbi leo urna molestie at elementum. Aenean sed adipiscing diam donec adipiscing tristique risus. Porttitor
-          lacus luctus accumsan tortor posuere ac ut consequat. Venenatis tellus in metus vulputate eu scelerisque. Nibh
-          ipsum consequat nisl vel pretium lectus. Eget egestas purus viverra accumsan in nisl nisi. Posuere lorem ipsum
-          dolor sit amet consectetur. Tincidunt arcu non sodales neque. Lorem dolor sed viverra ipsum nunc aliquet. Vitae
-          auctor eu augue ut. A diam sollicitudin tempor id eu. Egestas erat imperdiet sed euismod nisi porta lorem. Quis
-          auctor elit sed vulputate mi.
-        </p>
-
-        <p>Mus mauris vitae ultricies leo integer malesuada nunc vel. Tincidunt praesent semper feugiat nibh sed pulvinar. Velit
-          dignissim sodales ut eu. Aliquam eleifend mi in nulla posuere sollicitudin aliquam ultrices sagittis. Vulputate
-          mi sit amet mauris. Cursus sit amet dictum sit amet justo donec. Morbi quis commodo odio aenean sed adipiscing
-          diam donec adipiscing. </p>
-      </div>
-
-      <div style="clear:both; height: 1.5rem"></div>
-      <label class="checkbox checkmark">
-          <input type="checkbox">
-          ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-          Morbi leo urna molestie at elementum.
-        </label>
-    </mat-card-content>
+      <mat-checkbox #termsi>
+        Aliquam eleifend mi in nulla posuere sollicitudin aliquam ultrices sagittis.Vulputate mi sit amet mauris. Cursus sit amet
+        dictum sit amet justo donec.
+      </mat-checkbox>
     </div>
-  </div>
 
+    <div class="separador"></div>
 
+    <div class="is-pulled-right">
+      <button mat-button type="button" style="margin-right: 15px" (click)="onClickTerms(true)" [disabled]="!(termsi.checked)">Accept</button>
+      <button mat-button type="button" (click)="onClickTerms(false)">Decline</button>
+    </div>
 
-  <div style="clear:both; height: 1.5rem"></div>
-  <div class="is-pulled-right">
-    <button class="button" style="margin-right: 15px">Accept</button>
-    <button class="button">Decline</button>
-  </div>
+    <div class="separador"></div>
 
-
-
-
-
-
-  <mat-card class="gdpr" *ngIf="false">
-    <img mat-card-img src="https://material.angular.io/assets/img/examples/shiba2.jpg">
-    <mat-card-content>
-      <div class="description">
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna
-          aliqua. Morbi leo urna molestie at elementum. Aenean sed adipiscing diam donec adipiscing tristique risus. Porttitor
-          lacus luctus accumsan tortor posuere ac ut consequat. Venenatis tellus in metus vulputate eu scelerisque. Nibh
-          ipsum consequat nisl vel pretium lectus. Eget egestas purus viverra accumsan in nisl nisi. Posuere lorem ipsum
-          dolor sit amet consectetur. Tincidunt arcu non sodales neque. Lorem dolor sed viverra ipsum nunc aliquet. Vitae
-          auctor eu augue ut. A diam sollicitudin tempor id eu. Egestas erat imperdiet sed euismod nisi porta lorem. Quis
-          auctor elit sed vulputate mi.
-        </p>
-
-        <p>Mus mauris vitae ultricies leo integer malesuada nunc vel. Tincidunt praesent semper feugiat nibh sed pulvinar. Velit
-          dignissim sodales ut eu. Aliquam eleifend mi in nulla posuere sollicitudin aliquam ultrices sagittis. Vulputate
-          mi sit amet mauris. Cursus sit amet dictum sit amet justo donec. Morbi quis commodo odio aenean sed adipiscing
-          diam donec adipiscing. </p>
-      </div>
-      <div class="checkbox">
-        <mat-checkbox>ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-          Morbi leo urna molestie at elementum.</mat-checkbox>
-      </div>
-    </mat-card-content>
-
-
-    <mat-card-actions>
-      <div class="buttons">
-        <button mat-button>Accept</button>
-        <button mat-button>Decline</button>
-      </div>
-    </mat-card-actions>
   </mat-card>
-
 </div>
+
 <router-outlet></router-outlet>
