--- a/src/app/gdpr/gdpr.component.scss
+++ b/src/app/gdpr/gdpr.component.scss
@@ -1,16 +1,21 @@
 .gdpr {
     margin: 2%;
 }
-
+/*
 .imagen {
     width: 100%;
     height: auto;
 }
+*/
+
+.imagen {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+}
 
 .border {
     border:2px solid black;
-    //max-height: 250px;
-    height: auto;
 }
 
 .paragraph {
@@ -28,15 +33,31 @@
     text-align: right;
 }
 
-.separador {
-    clear:both; 
-    height: 1.5rem;
-}
-
-.txt {
-    width: 100%
+.column {
+    width: 100%;
 }
 
 ::ng-deep .mat-checkbox-label {
     white-space: pre-wrap;
+}
+
+::ng-deep .embedpre {
+    font-size: 20px;
+    font-family: Arial, Helvetica, sans-serif;
+    width: 100%;
+    background-color: aquamarine;
+}
+
+.txt {
+    width: 100%;
+}
+
+pre {
+    background-color: white;
+    width: 100%;
+    font-size: 1rem;
+    font-family: Arial, Helvetica, sans-serif;
+    white-space: normal;
+    overflow-y: scroll;
+    height: 200px;
 }
